--- a/DOME.vcxproj
+++ b/DOME.vcxproj
@@ -35,6 +35,7 @@
     <ClInclude Include="classes\Item.h" />
     <ClInclude Include="classes\locations_scene.h" />
     <ClInclude Include="classes\navigation_station.h" />
+    <ClInclude Include="classes\pause_button.h" />
     <ClInclude Include="classes\pause_scene.h" />
     <ClInclude Include="classes\ship_station.h" />
     <ClInclude Include="classes\sleep_station.h" />
@@ -169,6 +170,7 @@
     <ClCompile Include="classes\Item.cpp" />
     <ClCompile Include="classes\locations_scene.cpp" />
     <ClCompile Include="classes\navigation_station.cpp" />
+    <ClCompile Include="classes\pause_button.cpp" />
     <ClCompile Include="classes\pause_scene.cpp" />
     <ClCompile Include="classes\ship_station.cpp" />
     <ClCompile Include="classes\sleep_station.cpp" />
