--- a/DOME.vcxproj.filters
+++ b/DOME.vcxproj.filters
@@ -324,6 +324,9 @@
     <ClCompile Include="components\TransitionComponent.cpp">
       <Filter>Source Files\components</Filter>
     </ClCompile>
+    <ClCompile Include="classes\pause_button.cpp">
+      <Filter>Source Files\classes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="utils\Collisions.h">
@@ -719,6 +722,9 @@
     <ClInclude Include="components\CameraMovement.h" />
     <ClInclude Include="components\TransitionComponent.h">
       <Filter>Header Files\components</Filter>
+    </ClInclude>
+    <ClInclude Include="classes\pause_button.h">
+      <Filter>Header Files\classes</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
