--- a/DOME.vcxproj
+++ b/DOME.vcxproj
@@ -38,6 +38,7 @@
     <ClInclude Include="classes\pause_button.h" />
     <ClInclude Include="classes\pause_scene.h" />
     <ClInclude Include="classes\SceneManager.h" />
+    <ClInclude Include="classes\settings_scene.h" />
     <ClInclude Include="classes\ship_station.h" />
     <ClInclude Include="classes\sleep_station.h" />
     <ClInclude Include="classes\tile.h" />
@@ -174,6 +175,7 @@
     <ClCompile Include="classes\pause_button.cpp" />
     <ClCompile Include="classes\pause_scene.cpp" />
     <ClCompile Include="classes\SceneManager.cpp" />
+    <ClCompile Include="classes\settings_scene.cpp" />
     <ClCompile Include="classes\ship_station.cpp" />
     <ClCompile Include="classes\sleep_station.cpp" />
     <ClCompile Include="classes\tile.cpp" />
