--- a/DOME.vcxproj.filters
+++ b/DOME.vcxproj.filters
@@ -245,8 +245,10 @@
     <ClCompile Include="components\CameraMovement.cpp">
       <Filter>Source Files\components</Filter>
     </ClCompile>
-    <ClCompile Include="classes\settings_scene.cpp" />
     <ClCompile Include="classes\lose_scene.cpp">
+      <Filter>Source Files\classes</Filter>
+    </ClCompile>
+    <ClCompile Include="classes\settings_scene.cpp">
       <Filter>Source Files\classes</Filter>
     </ClCompile>
   </ItemGroup>
@@ -539,8 +541,10 @@
     <ClInclude Include="components\CameraMovement.h">
       <Filter>Header Files\components</Filter>
     </ClInclude>
-    <ClInclude Include="classes\settings_scene.h" />
     <ClInclude Include="classes\lose_scene.h">
+      <Filter>Header Files\classes</Filter>
+    </ClInclude>
+    <ClInclude Include="classes\settings_scene.h">
       <Filter>Header Files\classes</Filter>
     </ClInclude>
   </ItemGroup>
