fixed compilation error

--- a/DOME.vcxproj.filters
+++ b/DOME.vcxproj.filters
@@ -251,6 +251,9 @@
     <ClCompile Include="classes\settings_scene.cpp">
       <Filter>Source Files\classes</Filter>
     </ClCompile>
+    <ClCompile Include="classes\spaceship_station.cpp">
+      <Filter>Source Files\classes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="utils\Collisions.h">
@@ -545,6 +548,9 @@
       <Filter>Header Files\classes</Filter>
     </ClInclude>
     <ClInclude Include="classes\settings_scene.h">
+      <Filter>Header Files\classes</Filter>
+    </ClInclude>
+    <ClInclude Include="classes\spaceship_station.h">
       <Filter>Header Files\classes</Filter>
     </ClInclude>
   </ItemGroup>
