--- a/DOME.vcxproj
+++ b/DOME.vcxproj
@@ -42,6 +42,7 @@
     <ClInclude Include="classes\settings_scene.h" />
     <ClInclude Include="classes\ship_station.h" />
     <ClInclude Include="classes\sleep_station.h" />
+    <ClInclude Include="classes\spaceship_station.h" />
     <ClInclude Include="classes\tile.h" />
     <ClInclude Include="classes\menu_button.h" />
     <ClInclude Include="classes\menu_scene.h" />
@@ -142,6 +143,7 @@
     <ClCompile Include="classes\settings_scene.cpp" />
     <ClCompile Include="classes\ship_station.cpp" />
     <ClCompile Include="classes\sleep_station.cpp" />
+    <ClCompile Include="classes\spaceship_station.cpp" />
     <ClCompile Include="classes\tile.cpp" />
     <ClCompile Include="classes\menu_button.cpp" />
     <ClCompile Include="classes\menu_scene.cpp" />
