--- a/DOME.vcxproj
+++ b/DOME.vcxproj
@@ -40,6 +40,7 @@
     <ClInclude Include="classes\pause_scene.h" />
     <ClInclude Include="classes\SceneManager.h" />
     <ClInclude Include="classes\settings_scene.h" />
+    <ClInclude Include="classes\shelter_hud.h" />
     <ClInclude Include="classes\ship_station.h" />
     <ClInclude Include="classes\sleep_station.h" />
     <ClInclude Include="classes\spaceship_station.h" />
@@ -141,6 +142,7 @@
     <ClCompile Include="classes\pause_scene.cpp" />
     <ClCompile Include="classes\SceneManager.cpp" />
     <ClCompile Include="classes\settings_scene.cpp" />
+    <ClCompile Include="classes\shelter_hud.cpp" />
     <ClCompile Include="classes\ship_station.cpp" />
     <ClCompile Include="classes\sleep_station.cpp" />
     <ClCompile Include="classes\spaceship_station.cpp" />
