--- a/DOME.vcxproj.filters
+++ b/DOME.vcxproj.filters
@@ -260,6 +260,9 @@
     <ClCompile Include="classes\controls_scene.cpp">
       <Filter>Source Files\classes</Filter>
     </ClCompile>
+    <ClCompile Include="classes\lore_scene.cpp">
+      <Filter>Source Files\classes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="utils\Collisions.h">
@@ -563,6 +566,9 @@
       <Filter>Header Files\classes</Filter>
     </ClInclude>
     <ClInclude Include="classes\controls_scene.h">
+      <Filter>Header Files\classes</Filter>
+    </ClInclude>
+    <ClInclude Include="classes\lore_scene.h">
       <Filter>Header Files\classes</Filter>
     </ClInclude>
   </ItemGroup>
