--- a/DOME.vcxproj
+++ b/DOME.vcxproj
@@ -96,6 +96,7 @@
     <ClInclude Include="components\Transform.h" />
     <ClInclude Include="components\TransitionComponent.h" />
     <ClInclude Include="components\weapon.h" />
+    <ClInclude Include="components\weapon_animation.h" />
     <ClInclude Include="ecs\Component.h" />
     <ClInclude Include="ecs\ecs.h" />
     <ClInclude Include="ecs\Entity.h" />
@@ -211,6 +212,7 @@
     <ClCompile Include="utils\Collisions.cpp" />
     <ClCompile Include="utils\ray_cast.cpp" />
     <ClCompile Include="utils\Vector2D.cpp" />
+    <ClCompile Include="weapon_animation.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
