--- a/DOME.vcxproj.filters
+++ b/DOME.vcxproj.filters
@@ -263,7 +263,9 @@
     <ClCompile Include="classes\lore_scene.cpp">
       <Filter>Source Files\classes</Filter>
     </ClCompile>
-    <ClCompile Include="weapon_animation.cpp" />
+    <ClCompile Include="components\weapon_animation.cpp">
+      <Filter>Source Files\components</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="utils\Collisions.h">
@@ -572,7 +574,9 @@
     <ClInclude Include="classes\lore_scene.h">
       <Filter>Header Files\classes</Filter>
     </ClInclude>
-    <ClInclude Include="components\weapon_animation.h" />
+    <ClInclude Include="components\weapon_animation.h">
+      <Filter>Header Files\components</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Header Files">
