--- a/DOME.vcxproj
+++ b/DOME.vcxproj
@@ -39,6 +39,7 @@
     <ClInclude Include="classes\navigation_station.h" />
     <ClInclude Include="classes\pause_button.h" />
     <ClInclude Include="classes\pause_scene.h" />
+    <ClInclude Include="classes\qa_selection_scene.h" />
     <ClInclude Include="classes\SceneManager.h" />
     <ClInclude Include="classes\settings_scene.h" />
     <ClInclude Include="classes\shelter_hud.h" />
@@ -142,6 +143,7 @@
     <ClCompile Include="classes\navigation_station.cpp" />
     <ClCompile Include="classes\pause_button.cpp" />
     <ClCompile Include="classes\pause_scene.cpp" />
+    <ClCompile Include="classes\qa_selection_scene.cpp" />
     <ClCompile Include="classes\SceneManager.cpp" />
     <ClCompile Include="classes\settings_scene.cpp" />
     <ClCompile Include="classes\shelter_hud.cpp" />
