Minor fixes to better fit rules

--- a/DOME.vcxproj.filters
+++ b/DOME.vcxproj.filters
@@ -95,14 +95,8 @@
     <ClCompile Include="components\loot.cpp">
       <Filter>Source Files\components</Filter>
     </ClCompile>
-    <ClCompile Include="classes\ricochet_weapon.cpp">
-      <Filter>Source Files\classes</Filter>
-    </ClCompile>
     <ClCompile Include="components\ricochet.cpp">
       <Filter>Source Files\components</Filter>
-    </ClCompile>
-    <ClCompile Include="classes\charge_weapon.cpp">
-      <Filter>Source Files\classes</Filter>
     </ClCompile>
     <ClCompile Include="components\charge.cpp">
       <Filter>Source Files\components</Filter>
@@ -245,6 +239,12 @@
     <ClCompile Include="components\back_to_shelter.cpp">
       <Filter>Source Files\components</Filter>
     </ClCompile>
+    <ClCompile Include="classes\charge_weapon.cpp">
+      <Filter>Source Files\components</Filter>
+    </ClCompile>
+    <ClCompile Include="classes\ricochet_weapon.cpp">
+      <Filter>Source Files\components</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="utils\Collisions.h">
@@ -378,12 +378,6 @@
     </ClInclude>
     <ClInclude Include="components\ricochet.h">
       <Filter>Header Files\components</Filter>
-    </ClInclude>
-    <ClInclude Include="classes\ricochet_weapon.h">
-      <Filter>Header Files\classes</Filter>
-    </ClInclude>
-    <ClInclude Include="classes\charge_weapon.h">
-      <Filter>Header Files\classes</Filter>
     </ClInclude>
     <ClInclude Include="components\charge.h">
       <Filter>Header Files\components</Filter>
@@ -539,6 +533,12 @@
       <Filter>Header Files\classes</Filter>
     </ClInclude>
     <ClInclude Include="components\back_to_shelter.h">
+      <Filter>Header Files\components</Filter>
+    </ClInclude>
+    <ClInclude Include="classes\charge_weapon.h">
+      <Filter>Header Files\components</Filter>
+    </ClInclude>
+    <ClInclude Include="classes\ricochet_weapon.h">
       <Filter>Header Files\components</Filter>
     </ClInclude>
   </ItemGroup>
