Fixed problem where you couldn't click dropdwon outside of the inventory
also some code cleanup

--- a/DOME.vcxproj.filters
+++ b/DOME.vcxproj.filters
@@ -179,9 +179,6 @@
     <ClCompile Include="classes\ship_station.cpp">
       <Filter>Source Files\classes</Filter>
     </ClCompile>
-    <ClCompile Include="classes\navigation_station.cpp">
-      <Filter>Source Files\classes</Filter>
-    </ClCompile>
     <ClCompile Include="classes\sleep_station.cpp">
       <Filter>Source Files\classes</Filter>
     </ClCompile>
@@ -239,24 +236,12 @@
     <ClCompile Include="classes\check_button.cpp">
       <Filter>Source Files\classes</Filter>
     </ClCompile>
-    <ClCompile Include="components\CameraShake.cpp">
-      <Filter>Source Files\components</Filter>
-    </ClCompile>
-    <ClCompile Include="components\Dialogue.cpp">
-      <Filter>Source Files\components</Filter>
-    </ClCompile>
-    <ClCompile Include="components\HoldToSkip.cpp">
-      <Filter>Source Files\components</Filter>
-    </ClCompile>
-    <ClCompile Include="components\InitialCameraZoom.cpp">
-      <Filter>Source Files\components</Filter>
-    </ClCompile>
-    <ClCompile Include="classes\InitialScene.cpp">
-      <Filter>Source Files\components</Filter>
-    </ClCompile>
-    <ClCompile Include="components\Timer.cpp">
-      <Filter>Source Files\components</Filter>
-    </ClCompile>
+    <ClCompile Include="components\HoldToSkip.cpp" />
+    <ClCompile Include="components\InitialCameraZoom.cpp" />
+    <ClCompile Include="classes\InitialScene.cpp" />
+    <ClCompile Include="components\Dialogue.cpp" />
+    <ClCompile Include="components\CameraShake.cpp" />
+    <ClCompile Include="components\Timer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="utils\Collisions.h">
@@ -487,9 +472,6 @@
     <ClInclude Include="classes\sleep_station.h">
       <Filter>Header Files\classes</Filter>
     </ClInclude>
-    <ClInclude Include="classes\navigation_station.h">
-      <Filter>Header Files\classes</Filter>
-    </ClInclude>
     <ClInclude Include="sdlutils\SoundManager.h">
       <Filter>Header Files\sdlutils</Filter>
     </ClInclude>
@@ -544,26 +526,14 @@
     <ClInclude Include="classes\check_button.h">
       <Filter>Header Files\classes</Filter>
     </ClInclude>
+    <ClInclude Include="components\HoldToSkip.h" />
+    <ClInclude Include="components\InitialCameraZoom.h" />
+    <ClInclude Include="classes\InitialScene.h" />
+    <ClInclude Include="components\Dialogue.h" />
+    <ClInclude Include="components\CameraShake.h" />
+    <ClInclude Include="components\Timer.h" />
     <ClInclude Include="classes\game_object.h">
       <Filter>Header Files\classes</Filter>
-    </ClInclude>
-    <ClInclude Include="components\CameraShake.h">
-      <Filter>Header Files\components</Filter>
-    </ClInclude>
-    <ClInclude Include="components\Dialogue.h">
-      <Filter>Header Files\components</Filter>
-    </ClInclude>
-    <ClInclude Include="components\HoldToSkip.h">
-      <Filter>Header Files\components</Filter>
-    </ClInclude>
-    <ClInclude Include="components\InitialCameraZoom.h">
-      <Filter>Header Files\components</Filter>
-    </ClInclude>
-    <ClInclude Include="classes\InitialScene.h">
-      <Filter>Header Files\components</Filter>
-    </ClInclude>
-    <ClInclude Include="components\Timer.h">
-      <Filter>Header Files\components</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
