Fixed merge problems

--- a/DOME.vcxproj.filters
+++ b/DOME.vcxproj.filters
@@ -95,8 +95,14 @@
     <ClCompile Include="components\loot.cpp">
       <Filter>Source Files\components</Filter>
     </ClCompile>
+    <ClCompile Include="classes\ricochet_weapon.cpp">
+      <Filter>Source Files\classes</Filter>
+    </ClCompile>
     <ClCompile Include="components\ricochet.cpp">
       <Filter>Source Files\components</Filter>
+    </ClCompile>
+    <ClCompile Include="classes\charge_weapon.cpp">
+      <Filter>Source Files\classes</Filter>
     </ClCompile>
     <ClCompile Include="components\charge.cpp">
       <Filter>Source Files\components</Filter>
@@ -167,6 +173,9 @@
     <ClCompile Include="classes\locations_scene.cpp">
       <Filter>Source Files\classes</Filter>
     </ClCompile>
+    <ClCompile Include="components\back_to_shelter.cpp">
+      <Filter>Source Files\classes</Filter>
+    </ClCompile>
     <ClCompile Include="classes\ship_station.cpp">
       <Filter>Source Files\classes</Filter>
     </ClCompile>
@@ -227,15 +236,6 @@
     <ClCompile Include="classes\check_button.cpp">
       <Filter>Source Files\classes</Filter>
     </ClCompile>
-    <ClCompile Include="components\back_to_shelter.cpp">
-      <Filter>Source Files\components</Filter>
-    </ClCompile>
-    <ClCompile Include="classes\charge_weapon.cpp">
-      <Filter>Source Files\components</Filter>
-    </ClCompile>
-    <ClCompile Include="classes\ricochet_weapon.cpp">
-      <Filter>Source Files\components</Filter>
-    </ClCompile>
     <ClCompile Include="components\CameraShake.cpp">
       <Filter>Source Files\components</Filter>
     </ClCompile>
@@ -255,7 +255,7 @@
       <Filter>Source Files\components</Filter>
     </ClCompile>
     <ClCompile Include="classes\PlayerSaveData.cpp">
-      <Filter>Source Files\components</Filter>
+      <Filter>Source Files\classes</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -391,6 +391,12 @@
     <ClInclude Include="components\ricochet.h">
       <Filter>Header Files\components</Filter>
     </ClInclude>
+    <ClInclude Include="classes\ricochet_weapon.h">
+      <Filter>Header Files\classes</Filter>
+    </ClInclude>
+    <ClInclude Include="classes\charge_weapon.h">
+      <Filter>Header Files\classes</Filter>
+    </ClInclude>
     <ClInclude Include="components\charge.h">
       <Filter>Header Files\components</Filter>
     </ClInclude>
@@ -472,6 +478,9 @@
     <ClInclude Include="classes\locations_scene.h">
       <Filter>Header Files\classes</Filter>
     </ClInclude>
+    <ClInclude Include="components\back_to_shelter.h">
+      <Filter>Header Files\classes</Filter>
+    </ClInclude>
     <ClInclude Include="classes\ship_station.h">
       <Filter>Header Files\classes</Filter>
     </ClInclude>
@@ -532,23 +541,8 @@
     <ClInclude Include="classes\check_button.h">
       <Filter>Header Files\classes</Filter>
     </ClInclude>
-    <ClInclude Include="components\HoldToSkip.h" />
-    <ClInclude Include="components\InitialCameraZoom.h" />
-    <ClInclude Include="classes\InitialScene.h" />
-    <ClInclude Include="components\Dialogue.h" />
-    <ClInclude Include="components\CameraShake.h" />
-    <ClInclude Include="components\Timer.h" />
     <ClInclude Include="classes\game_object.h">
       <Filter>Header Files\classes</Filter>
-    </ClInclude>
-    <ClInclude Include="components\back_to_shelter.h">
-      <Filter>Header Files\components</Filter>
-    </ClInclude>
-    <ClInclude Include="classes\charge_weapon.h">
-      <Filter>Header Files\components</Filter>
-    </ClInclude>
-    <ClInclude Include="classes\ricochet_weapon.h">
-      <Filter>Header Files\components</Filter>
     </ClInclude>
     <ClInclude Include="components\CameraShake.h">
       <Filter>Header Files\components</Filter>
@@ -568,7 +562,9 @@
     <ClInclude Include="components\Timer.h">
       <Filter>Header Files\components</Filter>
     </ClInclude>
-    <ClInclude Include="classes\PlayerSaveData.h" />
+    <ClInclude Include="classes\PlayerSaveData.h">
+      <Filter>Header Files\classes</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Header Files">
