--- a/DOME.vcxproj
+++ b/DOME.vcxproj
@@ -83,7 +83,7 @@
     <ClInclude Include="components\pain_component.h" />
     <ClInclude Include="components\parallax_component.h" />
     <ClInclude Include="components\particleSystem.h" />
-    <ClInclude Include="components\enemy_contact_damege.h" />
+    <ClInclude Include="components\enemy_contact_damage.h" />
     <ClInclude Include="components\player_health_component.h" />
     <ClInclude Include="components\rigid_body.h" />
     <ClInclude Include="components\TextWithBackGround.h" />
@@ -184,7 +184,7 @@
     <ClCompile Include="components\pain_component.cpp" />
     <ClCompile Include="components\parallax_component.cpp" />
     <ClCompile Include="components\particleSystem.cpp" />
-    <ClCompile Include="components\enemy_contact_damege.cpp" />
+    <ClCompile Include="components\enemy_contact_damage.cpp" />
     <ClCompile Include="components\rigid_body.cpp" />
     <ClCompile Include="components\TextWithBackGround.cpp" />
     <ClCompile Include="components\player_animation.cpp" />
